<resources>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="dnt_hv_account">Don\'t have an account?
        <u>
            <b>SignUp</b>
        </u>
    </string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="signup">SignUp</string>
    <string name="create_a_new_account">Create New Account</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="t_c">
        <u>Terms &amp; Conditions</u>
    </string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="driverRegister">Register</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="send">Send</string>
    <string name="enter_your_phone_number_in_given_field_we_will_send_you_the_link_to_change_password">Enter your phone
        number in given field. We will send you an otp to verify your phone number.
    </string>
    <string name="enter_otp">Enter OTP</string>
    <string name="submit">Submit</string>
    <string name="enter_4_digit_code">Enter 4 digit code</string>
    <string name="welcome_to_rons">Welcome to Rons</string>
    <string name="next">Next</string>
    <string name="alert_enable_gps">For precise location, please enable Location</string>
    <string name="ok">OK</string>
    <string name="enable_location_permission">Grant permission to access your location, to see available services in
        your region.
    </string>
    <string name="license_number">License Number</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="issued_on">Issued On</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="please_choose_a_type_of_vehicle_from_below_list">Please choose a type of vehicle from below list
    </string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="color">Color</string>
    <string name="year">Year</string>
    <string name="vehicle_registration">Vehicle Registration</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="step_1_vehicle_details">Step 1: Vehicle Details</string>
    <string name="step_2_license_details">Step 4: Driver License</string>
    <string name="license_details">Driver License</string>
    <string name="step_3_vehicle_insurance">Step 2: Vehicle Insurance</string>
    <string name="vehicle_insurance">Vehicle Insurance</string>
    <string name="step_4_vehicle_permit">Step 3: Vehicle Permit</string>
    <string name="vehicle_permit">Vehicle Permit</string>
    <string name="getting_started">Getting Started</string>
    <string name="update_documents">Update Documents</string>
    <string name="upload_document">Upload Documents</string>
    <string name="pleaseEnter">Please enter</string>
    <string name="validEmailPhone">Please enter valid email/phone Number address</string>
    <string name="validPass">Password must be of minimum 6 characters</string>
    <string name="validEmail">Please enter valid email address</string>
    <string name="please">Please</string>
    <string name="passMatch">Password does not match.</string>
    <string name="onlyOneSpace">Only 1 space allowed between first name and last name</string>
    <string name="validUserName">Please enter valid userName</string>
    <string name="firstLetterCap">First letter must be capital</string>
    <string name="validPhone">Please Enter valid phone Number</string>
    <string name="phoneLength">Phone number must be of 10 digits</string>
    <string name="termCondition"><![CDATA[Please accept the Terms & Conditions by clicking on checkbox.]]></string>
    <string name="contactNumber">Enter phone number</string>
    <string name="addImage">Please add profile picture</string>
    <string name="internet_connection">Internet Connection seems to be offline. Please check you Internet
        Connectivity.
    </string>
    <string name="cancel">Cancel</string>
    <string name="add_vehicle_details">Add Vehicle Details</string>
    <string name="take_a_photo_of_vehicle">Take a photo of vehicle</string>
    <string name="take_a_photo_of_license">Take a photo of license</string>
    <string name="please_upload_rc">Please upload vehicle registration</string>
    <string name="upload_registration">Upload vehicle registration document</string>
    <string name="upload_driving_license">Driving License</string>
    <string name="upload_license">Please upload license photo</string>
    <string name="max_person">Max\nPerson</string>
    <string name="select_vehicle_type">Select Vehicle Type</string>
    <string name="select_a_vehicle_type">Please select a vehicle type</string>
    <string name="checking_details">Checking details</string>
    <string name="license_is_used">This license number as already been used on another account</string>
    <string name="phone_number_used">This phone number has already been used in another account</string>
    <string name="upload_insurance">Please upload vehicle insurance</string>
    <string name="upload_permit">Please upload a valid vehicle permit</string>
    <string name="upload_vehicle_details">Please upload vehicle details</string>
    <string name="upload_license_details">Please upload license details</string>
    <string name="register_driver">Registering Driver</string>
    <string name="loging_in">Loging In</string>
    <string name="updating">Updaing data...</string>
    <string name="password_length_6_to_8_must_be_alpha_numeric">Password(length 6 to 8, alpha-numeric)</string>
    <string name="pass_alpha_numeric">Password should be alpha numeric</string>
    <string name="registering_rider">Registering Rider</string>
    <string name="mobile_verify">Mobile Verify</string>
    <string name="otp_information">We are unable to auto verify your\nmobile number. Please enter the code tested to\n
    </string>
    <string name="wait">Please Wait</string>
    <string name="verifying_user">Verifying User</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password (length 6 to 8, alpha-numeric)</string>
    <string name="reset_password">Reset Password</string>
    <string name="changing_password">Changing Password</string>
    <string name="registration_number">Registration Number</string>
    <string name="upload_vehicle_image">Please upload a vehicle image</string>
    <string name="resend_otp">
        <u>Resend Otp</u>
    </string>
    <string name="requesting_otp">Requesting Otp</string>
    <string name="verify">Verify</string>
    <string name="schedule_your_cab">Schedule Your Cab</string>
    <string name="book_now">Book Now</string>
    <string name="where_to">Where to?</string>
    <string name="profile">Profile</string>
    <string name="help">Help</string>
    <string name="payments">Payments</string>
    <string name="your_trips">Your Trips</string>
    <string name="about_us">About Us</string>
    <string name="current_location">Current Location</string>
    <string name="saved_addresses">SAVED ADDRESSES</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="recent_addresses">RECENT ADDRESSES</string>
    <string name="search_results">Search Results</string>
    <string name="edit">Edit</string>
    <string name="plate_number">Plate Number</string>
    <string name="registration_certificate">Registration Certificate</string>
    <string name="update">Update</string>
    <string name="home_nav_bottom">HOME</string>
    <string name="home_nav_earnings">EARNINGS</string>
    <string name="home_nav_ratings">RATINGS</string>
    <string name="home_nav_account">ACCOUNT</string>
    <string name="you_are_offline">You are offline</string>
    <string name="you_are_online">You are online</string>
    <string name="confirm_ride">CONFIRM RIDE</string>
    <string name="add_new_card_detail">ADD NEW CARD</string>
    <string name="payment_method">Payment Methods</string>
    <string name="save_cards">Saved Cards</string>
    <string name="logout">Log Out</string>
    <string name="no_cabs">NO CABS</string>
    <string name="pickup_request">Pickup Request</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="we_are_contacting_the_nearby_drivers">We are contacting the \nnearby drivers</string>
    <string name="call_driver">CALL DRIVER</string>
    <string name="cancel_ride">CANCEL RIDE</string>
    <string name="pick_up_location_">PICKUP LOCATION</string>
    <string name="drop_off_location_">DROPOFF LOCATION</string>
    <string name="booking_has_been_cancelled">Booking has been cancelled</string>
    <string name="rider_cancelled_booking">Rider has cancelled the booking</string>
    <string name="driver_cancelled_booking">Driver has cancelled the booking</string>
    <string name="accepted">Accepted</string>
    <string name="on_way">On the way</string>
    <string name="arrived">Arrived</string>
    <string name="review_your_trip">Review your trip</string>
    <string name="write_your_comment">WRITE YOUR COMMENT</string>
    <string name="rate_now">RATE NOW</string>
    <string name="need_help">NEED HELP?</string>
    <string name="reasons_for_cancellation">Reason for cancellation</string>
    <string name="done">Done</string>
    <string name="cancel_">CANCEL</string>
    <string name="done_">DONE</string>
    <string name="select_reason">Please select a reason</string>
    <string name="swipe_start">Swipe to start</string>
    <string name="swipe_end_trip">Swipe to end trip</string>
    <string name="don_t_worry_we_are_here_to_help_you_njust_share_your_query">Don\'t worry! We are here to help
        you.\nJust share your query.
    </string>
    <string name="choose_query_topic">Choose query topic</string>
    <string name="message">Message</string>
    <string name="completed">Completed</string>
    <string name="edit_car_details">Edit Car Details</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="basic_information">Basic Information</string>
    <string name="documents">Documents</string>
    <string name="change_password">Change Password</string>
    <string name="about">About</string>
    <string name="rating">Rating</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="tripshistory">Trips History</string>
    <string name="schedulecab">Schedule Your Cab</string>
    <string name="old_password">Old Password</string>
    <string name="change_password_banner">It\'s a good idea to use a strong password that you don\'t use elsewhere</string>
    <string name="log_out">Log Out</string>
    <string name="car_brand_name">Car brand,name</string>
    <string name="start_address">start address</string>
    <string name="end_address">end address</string>
    <string name="date_n_time">date_n_time</string>
    <string name="cash">Cash</string>
    <string name="_0_0">$ 0.0</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout ?</string>
    <string name="button_add">Add</string>
    <string name="acc_number">Account Number</string>
    <string name="acc_holder_name">Account Holder Name</string>
    <string name="acc_type">Individual</string>
    <string name="routing_number">Routing Number</string>
    <string name="enter_tip_amount">ENTER TIP AMOUNT</string>
    <string name="hint_tip_amount">$10</string>
    <string name="pay_now">Pay Now</string>
</resources>