<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/tool_bar_generic"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiAccNumber"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:hint="@string/acc_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBarGeneric"
        app:layout_constraintWidth_percent="0.90">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etAccNumber"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiAccHolderName"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:hint="@string/acc_holder_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiAccNumber"
        app:layout_constraintWidth_percent="0.90">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etAccHolderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiAccType"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:hint="@string/acc_type"
        app:layout_constraintBottom_toTopOf="@+id/tiRoutingNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiAccHolderName"
        app:layout_constraintWidth_percent=".9">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etAccType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/acc_type"
            android:textIsSelectable="false"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiRoutingNumber"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:hint="@string/routing_number"
        app:layout_constraintBottom_toTopOf="@+id/btnAddBank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiAccType"
        app:layout_constraintWidth_percent="0.90">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etRoutingNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnAddBank"
        style="@style/ButtonRoundedBlueStyle"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/button_add"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiRoutingNumber"
        app:layout_constraintWidth_percent=".7"/>


</android.support.constraint.ConstraintLayout>