<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">
    <include
            layout="@layout/tool_bar_generic"
    />



    <ImageView
            android:id="@+id/ivPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_otp_driver"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias=".15"

    />


    <TextView
        android:id="@+id/tvInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ivPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/otp_information"
        android:gravity="center"
        android:textColor="@color/md_black_1000"
        android:textSize="@dimen/sp_14"
    />


    <android.support.design.widget.TextInputLayout
            android:id="@+id/tiOtp"
            app:layout_constraintTop_toBottomOf="@+id/tvInformation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent=".8"
            android:hint="@string/enter_otp"
            android:textColorHint="@color/md_grey_500"
            android:layout_marginTop="@dimen/dp_20"

    >
        <android.support.design.widget.TextInputEditText
                android:id="@+id/etOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                style="@style/InputStyleDark"
                android:maxLength="4"
        />


    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/tvResend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiOtp"
        android:text="@string/resend_otp"
        android:textColor="@color/colorMustard"
        android:layout_marginTop="@dimen/dp_10"
        android:textSize="@dimen/sp_14"

    />



    <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlue"
            android:textColor="@color/md_white_1000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/submit"
            android:textStyle="bold"
    />

</android.support.constraint.ConstraintLayout>