<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_white_1000"
        xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
            android:id="@+id/ivRoad"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:background="@drawable/bg_road_blur"
    />

    <ImageView
    app:layout_constraintTop_toTopOf="@id/ivRoad"
    app:layout_constraintBottom_toBottomOf="@id/ivRoad"
    app:layout_constraintStart_toStartOf="@id/ivRoad"
    app:layout_constraintEnd_toEndOf="@id/ivRoad"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/logo"

    />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/dp_0"
        app:layout_constraintWidth_percent=".5"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorBlue"
        android:text="@string/login"
        android:textColor="@color/md_white_1000"
        android:textStyle="bold"

    />
    <Button
            android:id="@+id/btnRegister"
            android:layout_width="@dimen/dp_0"
            app:layout_constraintWidth_percent=".5"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/colorMustard"
            android:text="@string/driverRegister"
            android:textColor="@color/md_white_1000"
            android:textStyle="bold"

    />



    <TextView

            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivRoad"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/welcome_to_rons"
            android:textColor="@color/colorMustard"
            android:textSize="@dimen/sp_18"
    />




</android.support.constraint.ConstraintLayout>